--- a/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/All Project Intgration(Main).xaml
+++ b/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/All Project Intgration(Main).xaml
@@ -152,7 +152,7 @@
                 <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB integration File - Invoke Workflow File (IMDB integration File.xaml)" sap:VirtualizedContainerService.HintSize="380,178" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="IMDB integration File.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
                     <InOutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="io_dicIdbmMovieData">[dicIdbmMovieData]</InOutArgument>
-                    <InOutArgument x:TypeArguments="x:String" x:Key="in_strMovieName">[strMovieName]</InOutArgument>
+                    <InOutArgument x:TypeArguments="x:String" x:Key="io_strMovieName">[strMovieName]</InOutArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                 </ui:InvokeWorkflowFile>
               </Parallel>
@@ -165,7 +165,7 @@
                       <av:PointCollection x:Key="ConnectorLocation">600,575 600,625</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Prent Output" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;                    Results In IMDB &amp; Roten Tomato         &quot;&amp;&#xD;&#xA;&quot;               IMDB           |&quot;&amp;&quot;            Roten Tomato &quot;&amp;Environment.NewLine &amp;&#xD;&#xA;&quot;__________________________________________________________&quot;&amp;Environment.NewLine &amp;&#xD;&#xA;&quot;                         IMDB  &quot; &amp;&#xD;&#xA;&quot;Movie Data &quot;+dicIdbmMovieData(&quot;Movie Data&quot;)+Environment.NewLine+&#xD;&#xA;&quot;___________________________________________________________&quot;&amp;Environment.NewLine &amp;&#xD;&#xA;&quot;               Tomato  &quot; &amp; Environment.NewLine+&#xD;&#xA;&quot;Tomatometer :     &quot;+dicTomatoMovieData(&quot;Tomatometer&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Popcornmeter :     &quot;+dicTomatoMovieData(&quot;Popcornmeter&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Titel Data :           &quot;+dicTomatoMovieData(&quot;titelData&quot;)+Environment.NewLine]">
+                  <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Prent Output" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;                    Results In IMDB &amp; Roten Tomato         &quot;&amp;&#xA;&quot;               IMDB           |&quot;&amp;&quot;            Roten Tomato &quot;&amp;Environment.NewLine &amp;&#xA;&quot;__________________________________________________________&quot;&amp;Environment.NewLine &amp;&#xA;&quot;                         IMDB  &quot; &amp;&#xA;&quot;Movie Data &quot;+dicIdbmMovieData(&quot;Movie Data&quot;)+Environment.NewLine+&#xA;&quot;___________________________________________________________&quot;&amp;Environment.NewLine &amp;&#xA;&quot;               Tomato  &quot; &amp; Environment.NewLine+&#xA;&quot;Tomatometer :     &quot;+dicTomatoMovieData(&quot;Tomatometer&quot;)+Environment.NewLine+&#xA;&quot;Popcornmeter :     &quot;+dicTomatoMovieData(&quot;Popcornmeter&quot;)+Environment.NewLine+&#xA;&quot;Titel Data :           &quot;+dicTomatoMovieData(&quot;titelData&quot;)+Environment.NewLine]">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -192,10 +192,7 @@
                         </sap:WorkflowViewStateService.ViewState>
                       </ui:InputDialog>
                       <FlowStep.Next>
-                        <FlowDecision x:Name="__ReferenceID6" DisplayName="Flow Decision" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
-                          <FlowDecision.Condition>
-                            <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="strTryMore=&quot;Yes&quot;" />
-                          </FlowDecision.Condition>
+                        <FlowDecision x:Name="__ReferenceID6" Condition="[strTryMore=&quot;Yes&quot;]" DisplayName="Flow Decision" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_2" True="{x:Reference __ReferenceID0}">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -207,9 +204,6 @@
                               <x:String x:Key="TrueLabel">Yes</x:String>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <FlowDecision.True>
-                            <x:Reference>__ReferenceID0</x:Reference>
-                          </FlowDecision.True>
                           <FlowDecision.False>
                             <FlowStep x:Name="__ReferenceID7">
                               <sap:WorkflowViewStateService.ViewState>
