--- a/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/IMDB integration File.xaml
+++ b/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/IMDB integration File.xaml
@@ -1,7 +1,7 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="IMDB_integration_File" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="io_dicIdbmMovieData" Type="InOutArgument(scg:Dictionary(x:String, x:String))" />
-    <x:Property Name="in_strMovieName" Type="InOutArgument(x:String)" />
+    <x:Property Name="io_strMovieName" Type="InOutArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
@@ -91,24 +91,26 @@
       <Variable x:TypeArguments="x:TimeSpan" Default="00:00:03" Name="tsRetryDeuration" />
       <Variable x:TypeArguments="x:String" Default="https://www.imdb.com" Name="strIMDBLink" />
       <Variable x:TypeArguments="x:Boolean" Name="boolNotFound" />
+      <Variable x:TypeArguments="x:Boolean" Name="boolIMDBopen" />
+      <Variable x:TypeArguments="x:String" Name="strAllMovieData" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         <av:Size x:Key="ShapeSize">50,50</av:Size>
         <av:Point x:Key="ShapeLocation">575,5</av:Point>
-        <av:PointCollection x:Key="ConnectorLocation">600,55 600,155</av:PointCollection>
+        <av:PointCollection x:Key="ConnectorLocation">600,55 600,125</av:PointCollection>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
-      <x:Reference>__ReferenceID6</x:Reference>
+      <x:Reference>__ReferenceID9</x:Reference>
     </Flowchart.StartNode>
-    <FlowStep x:Name="__ReferenceID6">
+    <FlowStep x:Name="__ReferenceID6" sap2010:WorkflowViewState.IdRef="FlowStep_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">545,155</av:Point>
+          <av:Point x:Key="ShapeLocation">395,335</av:Point>
           <av:Size x:Key="ShapeSize">110,70</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">600,225 600,255</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">450,405 450,460 725,460</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB open - Invoke Workflow File (IMDB open.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="IMDB open.xaml">
@@ -127,16 +129,16 @@
         <FlowStep x:Name="__ReferenceID0">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">545,255</av:Point>
+              <av:Point x:Key="ShapeLocation">725,425</av:Point>
               <av:Size x:Key="ShapeSize">110,70</av:Size>
-              <av:PointCollection x:Key="ConnectorLocation">600,325 600,355 600.3333333333334,355 600.3333333333334,370</av:PointCollection>
+              <av:PointCollection x:Key="ConnectorLocation">780,495 780,525 780.3333333333334,525 780.3333333333334,540</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Movie Search - Invoke Workflow File (IMDB Movie Search.xaml)" sap:VirtualizedContainerService.HintSize="335.3333333333333,178" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="IMDB Movie Search.xaml">
+          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Movie Search - Invoke Workflow File (IMDB Movie Search.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="IMDB Movie Search.xaml">
             <ui:InvokeWorkflowFile.Arguments>
               <InArgument x:TypeArguments="x:Int32" x:Key="in_intNumberOfRetry">[intNumberOfRetry]</InArgument>
               <InArgument x:TypeArguments="x:TimeSpan" x:Key="in_tsRetryDeuration">[tsRetryDeuration]</InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_strMovieName">[in_strMovieName]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_strMovieName">[io_strMovieName]</InArgument>
               <OutArgument x:TypeArguments="x:Boolean" x:Key="out_boolNotFound">[boolNotFound]</OutArgument>
             </ui:InvokeWorkflowFile.Arguments>
             <sap:WorkflowViewStateService.ViewState>
@@ -150,10 +152,10 @@
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                  <av:Point x:Key="ShapeLocation">570,370</av:Point>
+                  <av:Point x:Key="ShapeLocation">750,540</av:Point>
                   <av:Size x:Key="ShapeSize">60.666666666666664,60.666666666666664</av:Size>
-                  <av:PointCollection x:Key="TrueConnector">600.3333333333334,430.6666666666667 600.3333333333334,460.6666666666667 600,460.6666666666667 600,475</av:PointCollection>
-                  <av:PointCollection x:Key="FalseConnector">570,400.3333333333333 540,400.3333333333333 540,400 405,400</av:PointCollection>
+                  <av:PointCollection x:Key="TrueConnector">780.3333333333334,600.6666666666666 780.3333333333334,630.6666666666666 780,630.6666666666666 780,645</av:PointCollection>
+                  <av:PointCollection x:Key="FalseConnector">750,570.3333333333334 720,570.3333333333334 720,570 585,570</av:PointCollection>
                   <x:String x:Key="FalseLabel">Not Found</x:String>
                   <x:String x:Key="TrueLabel">Found</x:String>
                 </scg:Dictionary>
@@ -162,9 +164,9 @@
                 <FlowStep x:Name="__ReferenceID3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">545,475</av:Point>
+                      <av:Point x:Key="ShapeLocation">725,645</av:Point>
                       <av:Size x:Key="ShapeSize">110,70</av:Size>
-                      <av:PointCollection x:Key="ConnectorLocation">600,545 600,595</av:PointCollection>
+                      <av:PointCollection x:Key="ConnectorLocation">780,715 780,765</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
                   <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Click on Frist Movie - Invoke Workflow File (IMDB Click on Frist Movie.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="IMDB Click on Frist Movie.xaml">
@@ -179,19 +181,19 @@
                     </sap:WorkflowViewStateService.ViewState>
                   </ui:InvokeWorkflowFile>
                   <FlowStep.Next>
-                    <FlowStep x:Name="__ReferenceID4">
+                    <FlowStep x:Name="__ReferenceID4" sap2010:WorkflowViewState.IdRef="FlowStep_2">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                          <av:Point x:Key="ShapeLocation">545,595</av:Point>
+                          <av:Point x:Key="ShapeLocation">725,765</av:Point>
                           <av:Size x:Key="ShapeSize">110,70</av:Size>
-                          <av:PointCollection x:Key="ConnectorLocation">600,665 600,695</av:PointCollection>
+                          <av:PointCollection x:Key="ConnectorLocation">780,835 780,875</av:PointCollection>
                         </scg:Dictionary>
                       </sap:WorkflowViewStateService.ViewState>
                       <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Movie Data Extraction - Invoke Workflow File (IMDB Movie Data Extraction.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="IMDB Movie Data Extraction.xaml">
                         <ui:InvokeWorkflowFile.Arguments>
                           <InArgument x:TypeArguments="x:TimeSpan" x:Key="in_tsRetryDeuration">[tsRetryDeuration]</InArgument>
                           <InArgument x:TypeArguments="x:Int32" x:Key="in_intNumberOfRetry">[intNumberOfRetry]</InArgument>
-                          <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="out_dicMovieData">[io_dicIdbmMovieData]</OutArgument>
+                          <OutArgument x:TypeArguments="x:String" x:Key="out_strAllMovieData">[strAllMovieData]</OutArgument>
                         </ui:InvokeWorkflowFile.Arguments>
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -200,20 +202,44 @@
                         </sap:WorkflowViewStateService.ViewState>
                       </ui:InvokeWorkflowFile>
                       <FlowStep.Next>
-                        <FlowStep x:Name="__ReferenceID5">
+                        <FlowStep x:Name="__ReferenceID8">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                              <av:Point x:Key="ShapeLocation">545,695</av:Point>
+                              <av:Point x:Key="ShapeLocation">725,875</av:Point>
                               <av:Size x:Key="ShapeSize">110,70</av:Size>
+                              <av:PointCollection x:Key="ConnectorLocation">780,945 780,985</av:PointCollection>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ui:CommentOut sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="CommentOut_1">
-                            <ui:CommentOut.Body>
-                              <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_1">
-                                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;Movie Nam &quot;+io_dicIdbmMovieData(&quot;Movie Nam&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Releas Yeer &quot;+io_dicIdbmMovieData(&quot;Releas Yeer&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Movie Certificate &quot;+io_dicIdbmMovieData(&quot;Movie Certificate&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Deuration &quot;+io_dicIdbmMovieData(&quot;Deuration&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Rate &quot;+io_dicIdbmMovieData(&quot;Rate&quot;)+Environment.NewLine]" />
-                              </Sequence>
-                            </ui:CommentOut.Body>
-                          </ui:CommentOut>
+                          <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Data Representation - Invoke Workflow File (IMDB Data Representation.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_6" UnSafe="False" WorkflowFileName="IMDB Data Representation.xaml">
+                            <ui:InvokeWorkflowFile.Arguments>
+                              <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)" x:Key="out_dicMovieData">[io_dicIdbmMovieData]</OutArgument>
+                              <InArgument x:TypeArguments="x:String" x:Key="in_strMovieData">[strAllMovieData]</InArgument>
+                              <InArgument x:TypeArguments="x:Int32" x:Key="in_intNumberOfRetry">[intNumberOfRetry]</InArgument>
+                              <InArgument x:TypeArguments="x:TimeSpan" x:Key="in_tsRetryDeuration">[tsRetryDeuration]</InArgument>
+                            </ui:InvokeWorkflowFile.Arguments>
+                            <sap:WorkflowViewStateService.ViewState>
+                              <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                              </scg:Dictionary>
+                            </sap:WorkflowViewStateService.ViewState>
+                          </ui:InvokeWorkflowFile>
+                          <FlowStep.Next>
+                            <FlowStep x:Name="__ReferenceID5">
+                              <sap:WorkflowViewStateService.ViewState>
+                                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                  <av:Point x:Key="ShapeLocation">725,985</av:Point>
+                                  <av:Size x:Key="ShapeSize">110,70</av:Size>
+                                </scg:Dictionary>
+                              </sap:WorkflowViewStateService.ViewState>
+                              <ui:CommentOut sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="CommentOut_2">
+                                <ui:CommentOut.Body>
+                                  <Sequence DisplayName="Ignored Activities" sap2010:WorkflowViewState.IdRef="Sequence_2">
+                                    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;Movie Nam &quot;+io_dicIdbmMovieData(&quot;Movie Nam&quot;)+Environment.NewLine+&#xA;&quot;Releas Yeer &quot;+io_dicIdbmMovieData(&quot;Releas Yeer&quot;)+Environment.NewLine+&#xA;&quot;Movie Certificate &quot;+io_dicIdbmMovieData(&quot;Movie Certificate&quot;)+Environment.NewLine+&#xA;&quot;Deuration &quot;+io_dicIdbmMovieData(&quot;Deuration&quot;)+Environment.NewLine+&#xA;&quot;Rate &quot;+io_dicIdbmMovieData(&quot;Rate&quot;)+Environment.NewLine]" />
+                                  </Sequence>
+                                </ui:CommentOut.Body>
+                              </ui:CommentOut>
+                            </FlowStep>
+                          </FlowStep.Next>
                         </FlowStep>
                       </FlowStep.Next>
                     </FlowStep>
@@ -224,7 +250,7 @@
                 <FlowStep x:Name="__ReferenceID2">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">295,365</av:Point>
+                      <av:Point x:Key="ShapeLocation">475,535</av:Point>
                       <av:Size x:Key="ShapeSize">110,70</av:Size>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
@@ -248,5 +274,52 @@
     <x:Reference>__ReferenceID3</x:Reference>
     <x:Reference>__ReferenceID4</x:Reference>
     <x:Reference>__ReferenceID5</x:Reference>
+    <FlowStep x:Name="__ReferenceID9">
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <av:Point x:Key="ShapeLocation">545,125</av:Point>
+          <av:Size x:Key="ShapeSize">110,70</av:Size>
+          <av:PointCollection x:Key="ConnectorLocation">600,195 600,225 600.3333333333334,225 600.3333333333334,230</av:PointCollection>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
+      <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="IMDB Check if Is opend - Invoke Workflow File (IMDB Check if Is opend.xaml)" sap:VirtualizedContainerService.HintSize="110,70" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="IMDB Check if Is opend.xaml">
+        <ui:InvokeWorkflowFile.Arguments>
+          <OutArgument x:TypeArguments="x:Boolean" x:Key="out_boolMdbOpened">[boolIMDBopen]</OutArgument>
+          <InArgument x:TypeArguments="x:Int32" x:Key="in_intNumberOfRetry">[intNumberOfRetry]</InArgument>
+          <InArgument x:TypeArguments="x:TimeSpan" x:Key="in_tsRetryDeuration">[tsRetryDeuration]</InArgument>
+        </ui:InvokeWorkflowFile.Arguments>
+        <sap:WorkflowViewStateService.ViewState>
+          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          </scg:Dictionary>
+        </sap:WorkflowViewStateService.ViewState>
+      </ui:InvokeWorkflowFile>
+      <FlowStep.Next>
+        <FlowDecision x:Name="__ReferenceID7" DisplayName="IMDB is opend ?" sap:VirtualizedContainerService.HintSize="60.666666666666664,60.666666666666664" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
+          <FlowDecision.Condition>
+            <VisualBasicValue x:TypeArguments="x:Boolean" DisplayName="Visual basic value" ExpressionText="boolIMDBopen" />
+          </FlowDecision.Condition>
+          <sap:WorkflowViewStateService.ViewState>
+            <scg:Dictionary x:TypeArguments="x:String, x:Object">
+              <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+              <av:Point x:Key="ShapeLocation">570,230</av:Point>
+              <av:Size x:Key="ShapeSize">60.666666666666664,60.666666666666664</av:Size>
+              <av:PointCollection x:Key="FalseConnector">570,260.3333333333333 450,260.3333333333333 450,335</av:PointCollection>
+              <av:PointCollection x:Key="TrueConnector">630.6666666666666,260.3333333333333 780,260.3333333333333 780,425</av:PointCollection>
+              <x:String x:Key="FalseLabel">NOT opened</x:String>
+              <x:String x:Key="TrueLabel">Opened</x:String>
+            </scg:Dictionary>
+          </sap:WorkflowViewStateService.ViewState>
+          <FlowDecision.True>
+            <x:Reference>__ReferenceID0</x:Reference>
+          </FlowDecision.True>
+          <FlowDecision.False>
+            <x:Reference>__ReferenceID6</x:Reference>
+          </FlowDecision.False>
+        </FlowDecision>
+      </FlowStep.Next>
+    </FlowStep>
+    <x:Reference>__ReferenceID7</x:Reference>
+    <x:Reference>__ReferenceID8</x:Reference>
   </Flowchart>
 </Activity>
